GNOME Bugzilla – Bug 651643
Memory leak on soup_session_abort()
Last modified: 2011-06-03 06:02:13 UTC
Created attachment 189005 [details] [review] proposed libsoup patch While working on memory issues in evolution-data-server I noticed a memory leak in libsoup, namely when calling soup_session_abort() on a sync session. The attached patch fixes the issue.
Created attachment 189027 [details] [review] proposed libsoup patch for libsoup; This includes two more memory leak fixes.
Comment on attachment 189027 [details] [review] proposed libsoup patch yup
Created commit 779660d in libsoup master Created commit e411c8e in libsoup gnome-3-0 (2.34.3+)