Fix few memory leaks

https://bugzilla.gnome.org/show_bug.cgi?id=651643